--- a/NEWS
+++ b/NEWS
@@ -24,7 +24,9 @@ JOE 3.1
 - Warn if file changed on save.
 - Added Ctrl-space block selection method
 - ^K E asks if you want to load original version of the file
-- jmacs bugs fixes: upperase word, transpose words.
+- jmacs bugs fixes: upperase word, transpose words, ^X ^C is
+  more emacs-like.
+- Much improved compile system ^[ c
 
 JOE 3.0 (23 APR 2004)
 - UTF-8
