--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri May 14 2004  Joe Allen <jhallen@world.std.com>
+
+	Many jpicorc.in improvements.
+
 Thu May 13 2004  Joe Allen <jhallen@world.std.com>
 
 	Improve exit messages.
@@ -13,6 +17,9 @@ Thu May 13 2004  Joe Allen <jhallen@world.std.com>
 
 	Shell window input taken from cmd.c instead of in
 	actual edit functions.
+
+	Improved 'lose' again- now it fill in windows with any
+	orphaned buffers it can find.
 
 Thu May 13 2004  Joe Allen <jhallen@world.std.com>
 
