--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun May 16 2004  Joe Allen <jhallen@world.std.com>
+
+	Fix mason bug.
+	Change ^K ^M back to move block.
+	^K H in jstar mode is "nmark".
+
 Fri May 14 2004  Joe Allen <jhallen@world.std.com>
 
 	Mason highlighter
