--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu May 27 2004  Joe Allen <jhallen@world.std.com>
+
+	Added diff.jsf.in.
+	Added improved xml.jsf.in
+
 Wed May 26 2004  Joe Allen <jhallen@world.std.com>
 
 	Fix lockup problem: do not allow querysave in
