--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@ Do something with these keys:
 ssh 3.2
 -------
 Arrow: [C [D [A [B
-Home: [2~ (ug! nobody else uses this... )
+Home: [2~ (uhg!)
 End: [4~
 Pgup: [5~
 Pgdn: [6~
@@ -24,7 +24,7 @@ F11: [23~
 F12: [24~
 
 Ctrl-arrow: -
-Alt-arrow: - (can set this mode, but doesn't work with arrow keys)
+Alt-arrow: - (can set Alt=ESC mode, but doesn't work with arrow keys)
 Shift-arrow: -
 
 -----
