--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Thu May 27 2004  Joe Allen <jhallen@world.std.com>
 
+	Added asm.jsf.in.
+
+
+Thu May 27 2004  Joe Allen <jhallen@world.std.com>
+
 	Added diff.jsf.in.
 	Added improved xml.jsf.in
 
