--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Dec 13 2004  Joe Allen <jhallen@world.std.com>
+
+	Accept SML syntax file.
+
 Mon Nov 29 2004  Joe Allen <jhallen@world.std.com>
 
 	Accept OCaml and 4GL syntax files.
