--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jan 19 2004  Joe Allen <jhallen@world.std.com>
+
+	New Pascal highlighter for Delphi and FPC
+
 Mon Dec 13 2004  Joe Allen <jhallen@world.std.com>
 
 	Accept SML syntax file.
