Fix perl highlighter bug, enhance ^G

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Sun Feb 20 2004  Joe Allen <jhallen@world.std.com>
+
+	Greatly enhanced ^G (goto matching delimiter) so that it understands
+	quoting and comments and can operate on word delimiters
+	(begin...end).
+
+Sun Feb 20 2004  Joe Allen <jhallen@world.std.com>
+
+	Fix perl highlighter bug (words ending in q
+	got confused with 'q').
+
 Wed Jan 19 2004  Joe Allen <jhallen@world.std.com>
 
 	New Pascal highlighter for Delphi and FPC
