fix bash highlighter

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,19 +1,23 @@
-Sun Feb 20 2004  Joe Allen <jhallen@world.std.com>
+Fri Feb 25 2005  Joe Allen <jhallen@world.std.com>
+
+	Fix bash highlighter bug: $"  " and $'  ' are strings.
+
+Sun Feb 20 2005  Joe Allen <jhallen@world.std.com>
 
 	Fix perl highlighter bug: \"fdfdg" is a string.
 
-Sun Feb 20 2004  Joe Allen <jhallen@world.std.com>
+Sun Feb 20 2005  Joe Allen <jhallen@world.std.com>
 
 	Greatly enhanced ^G (goto matching delimiter) so that it understands
 	quoting and comments and can operate on word delimiters
 	(begin...end).
 
-Sun Feb 20 2004  Joe Allen <jhallen@world.std.com>
+Sun Feb 20 2005  Joe Allen <jhallen@world.std.com>
 
 	Fix perl highlighter bug: words ending in q
 	got confused with 'q'.
 
-Wed Jan 19 2004  Joe Allen <jhallen@world.std.com>
+Wed Jan 19 2005  Joe Allen <jhallen@world.std.com>
 
 	New Pascal highlighter for Delphi and FPC
 
